src/index.css
@import "tailwindcss";

@font-face {
  font-family: "morabba";
  src: url(/fonts/Morabba/woff2/Morabba-Medium.woff2);
}
@font-face {
  font-family: "dana";
  src: url(/fonts/Dana/woff2/DanaFaNum-Regular.woff2);
}

@theme {
  --font-morabba-medium: "morabba";
  --font-dana-Regular: "dana";
}

@keyframes fade-up {
  from {
    transform: translateY(100px);
  }
  to {
    transform: translateY(0px);
  }
}
@keyframes fadeUp {
  0% {
    opacity: 0;
    scale: 0.5;
    transform: translateY(50px);
  }
  100% {
    opacity: 1;
    scale: 1;
    transform: translateY(0);
  }
}
@keyframes opacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes transform-x-right {
  0% {
    transform: translateX(100px);
  }
  100% {
    transform: translateX(0px);
  }
}
@keyframes transform-x-left {
  0% {
    transform: translateX(-100px);
  }
  100% {
    transform: translateX(0px);
  }
}

body {
  font-family: "dana";
  @apply bg-stone-100 transition-all duration-200 overflow-x-hidden;
}

html.dark section {
  @apply bg-gray-900 text-stone-200;
}
html.dark nav {
  @apply bg-gray-900/50 text-stone-200 border-b border-gray-700;
}
html.dark .phone-navbar {
  @apply bg-gray-900/50 text-stone-200 border-b border-gray-700;
}
html.dark footer {
  @apply bg-gray-800 text-stone-200 border-b border-gray-700;
}
html.dark .intro-hello {
  @apply bg-gray-800 text-stone-200;
}
html.dark .intro-title {
  @apply bg-gray-800 text-stone-200;
}
html.dark .intro-icon-bg {
  @apply bg-gray-800;
}
html.dark .intro-co p {
  @apply text-stone-200;
}
html.dark .intro-portfolio {
  @apply hover:text-gray-700;
}
html.dark .hero-box {
  @apply bg-gray-800 text-stone-200;
}
html.dark .hero-box p {
  @apply text-stone-200;
}
html.dark .skill-box {
  @apply bg-gray-800 text-stone-200 border-gray-700;
}
html.dark .hero-item {
  @apply bg-gray-700 text-stone-200 border-gray-500;
}
html.dark .skill-description {
  @apply text-stone-400;
}
html.dark .skill-box-desceription {
  @apply text-stone-200;
}
html.dark .FAQ-co {
  @apply bg-gray-800 border-gray-700;
}
html.dark .FAQ-item {
  @apply bg-gray-700 border-gray-700;
}
html.dark .FAQ-item p {
  @apply text-gray-400;
}
html.dark .HeroIntro p {
  @apply text-gray-400;
}
html.dark .welcome {
  @apply bg-gray-800 text-gray-200;
}
html.dark .futureGoalsCard {
  @apply bg-gray-800;
}
html.dark .futureGoalsCard p {
  @apply text-gray-400;
}
html.dark .PhilosophyCard {
  @apply bg-gray-800 text-gray-200;
}
html.dark .PhilosophyCard p {
  @apply text-gray-400;
}
html.dark .banner {
  @apply bg-gray-800 text-gray-200;
}
html.dark .banner p {
  @apply text-gray-400;
}
html.dark .banner li {
  @apply border-gray-700;
}
html.dark .ContactWays .card {
  @apply bg-gray-800;
}
html.dark .ContactWays img {
  @apply border-gray-700 hover:bg-gray-700;
}
html.dark .contact-form {
  @apply bg-gray-800;
}
html.dark .form-input {
  @apply bg-gray-700 text-gray-200 border-gray-500 focus:shadow-gray-700;
}
html.dark .form-textarea {
  @apply bg-gray-700 text-gray-200 border-gray-500 focus:shadow-gray-700;
}
html.dark .blog-head {
  @apply bg-gray-800 text-gray-200 border-gray-500;
}
html.dark .blog-title {
  @apply text-gray-400;
}
html.dark .post-card {
  @apply bg-gray-800 text-gray-200 border-gray-700;
}
html.dark .reading-time {
  @apply text-gray-400 border-gray-700;
}
html.dark .samples-hero {
  @apply bg-gray-800;
}
html.dark .samples-hero-span {
  @apply text-gray-200 bg-gray-900;
}
html.dark .samples-hero-span::before {
  box-shadow: -10px -8px #101828;
}
html.dark .samples-hero-span::after {
  box-shadow: 9px -8px #101828;
}
html.dark .hero-cards {
  @apply bg-gray-800;
}
html.dark .tech-stack-card {
  @apply bg-gray-700;
}
html.dark .hero-cards-item {
  @apply bg-gray-700;
}
html.dark .sample-card {
  @apply bg-gray-700;
}
html.dark .sample-card p {
  @apply text-gray-300/80;
}

html {
  scrollbar-color: #432dd7 beige;
}

::selection {
  background-color: #ffea00;
}

nav {
  @apply backdrop-blur-md w-full z-50 bg-white/50 p-4 px-20 sm:flex justify-between hidden;
}
.phone-navbar {
  @apply p-4 flex justify-between border-b border-gray-200;
}
footer {
  @apply space-y-10 p-5 bg-white border-t border-gray-300;
}

/* intro component */
.intro-co {
  @apply relative z-10 flex flex-col items-center p-5 md:p-20 overflow-hidden;
}
.intro-icon-bg {
  @apply absolute w-10 bg-white rounded-full animate-pulse p-1;
}
.intro-content {
  @apply flex flex-col gap-7 justify-center items-center z-10;
}
.intro-hello {
  animation: fade-up 0.5s linear;
  @apply text-sm bg-white p-2 rounded-sm border-r-4 border-indigo-700;
}
.intro-title {
  animation: fade-up 0.6s linear;
  @apply text-xs sm:text-sm bg-white p-2 rounded-sm border-r-4 border-indigo-700;
}
.intro-text {
  animation: fade-up 0.7s linear;
  @apply text-4xl font-morabba-medium text-center;
}
.intro-desceription {
  animation: fade-up 0.8s linear;
  @apply text-sm text-gray-700 text-wrap;
}
.intro-contact-btn {
  animation: fade-up 0.8s linear;
  @apply flex justify-center items-center gap-2 bg-indigo-600 p-2 rounded-sm text-xs text-white hover:bg-indigo-700 transition cursor-pointer;
}
.intro-portfolio {
  @apply flex justify-center items-center gap-2 text-xs p-2 hover:border-r-4 hover:bg-indigo-100 rounded-l-sm border-indigo-700 transition-all duration-75 cursor-pointer;
}
.hero-box {
  animation: fade-up 0.9s linear;
  @apply flex flex-wrap justify-between items-center gap-5 mt-5 bg-white rounded-lg p-2;
}
.hero-item {
  @apply bg-stone-100 flex grow justify-center items-center gap-2 p-2 rounded-sm border border-gray-200 hover:scale-90 transition-all duration-300 cursor-pointer;
}
.skill-box {
  animation: fadeUp alternate both;
  animation-timeline: view(80% 10%);

  @apply flex flex-col items-center bg-white rounded-lg w-full p-7 space-y-5 border border-gray-200
  cursor-pointer transition-all duration-300 ease-in-out hover:scale-105 hover:shadow-2xl;
}
.skill-description {
  @apply text-center text-sm text-gray-700 mt-5;
}
.skill-box-icon {
  @apply flex justify-center items-center bg-indigo-500 w-10 h-10 rounded-md text-white;
}
.skill-box-title {
  @apply flex justify-center items-center gap-1 font-semibold;
}
.skill-box-desceription {
  @apply text-sm text-gray-700 text-center;
}

.FAQ-co {
  animation: opacity alternate both;
  animation-timeline: view(70% 10%);

  @apply bg-white m-5 my-15 rounded-2xl grid grid-cols-1 border border-gray-200
  sm:grid-cols-2 gap-10 sm:gap-0 px-5 py-10;
}
.FAQ-item {
  @apply bg-gray-100 w-full p-4 rounded-md text-sm;
}

.footer-icon {
  @apply bg-indigo-500 p-2 rounded-sm text-white hover:scale-110 cursor-pointer transition-all duration-300;
}

/* AboutUsPage */
.HeroIntro {
  animation: transform-x-right 1s both;

  @apply flex flex-col justify-center gap-10 items-center md:items-start justify-self-center;
}
.hero-image {
  animation: transform-x-left 1s both;

  @apply w-100 justify-self-center;
}
.HeroIntro .welcome {
  @apply bg-white rounded-l-md border-r-4 border-indigo-700 text-sm py-1 px-2;
}
.tech-stack-card {
  animation: opacity alternate both;
  animation-timeline: view(70% 10%);

  @apply bg-white flex grow justify-between items-center p-4 rounded-sm w-52 hover:scale-95 transition-all duration-300 cursor-pointer;
}
.Philosophy {
  @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mt-10;
}
.PhilosophyCard {
  animation: opacity alternate both;
  animation-timeline: view(70% 10%);

  @apply flex items-center gap-2 bg-white p-5 rounded-md hover:shadow-2xl hover:scale-95 transition-all duration-300 cursor-pointer;
}
.PhilosophyCard p {
  @apply text-sm text-gray-700;
}

.futureGoalsCard {
  @apply bg-white p-5 rounded-l-md hover:shadow-2xl h-30 content-center border-r-4 border-indigo-700 transition-shadow cursor-pointer;
}
.futureGoalsCard:first-child {
  animation: transform-x-right 1s alternate both;
  animation-timeline: view(70% 5%);
}
.futureGoalsCard:last-child {
  animation: transform-x-left 1s alternate both;
  animation-timeline: view(70% 5%);
}
.futureGoalsCard p {
  @apply text-sm text-gray-700 mt-2;
}

/* ContactPage */

.banner {
  animation: opacity 0.8s linear;
  @apply bg-white my-10 p-10 flex flex-col items-center gap-10 rounded-lg overflow-hidden;
}
.banner li {
  @apply flex items-center gap-2 text-sm py-2 px-4 border border-stone-300 rounded-md hover:bg-indigo-500 transition cursor-pointer;
}
.ContactWays {
  @apply w-full flex flex-wrap justify-between items-center gap-5 my-15;
}
.ContactWays img {
  @apply border border-stone-200 p-1 rounded-md hover:scale-90 hover:bg-gray-200 transition duration-300 cursor-pointer;
}
.ContactWays .card {
  @apply w-2xs flex grow justify-between items-center bg-white p-5 rounded-lg;
}
.ContactWays .card .card-span {
  @apply block text-gray-500 text-sm;
}
.contact-form {
  animation: fade-up 0.8s both;
  animation-timeline: view(80% 10%);

  @apply bg-white p-5 my-15 rounded-md;
}
.contact-form .form-input {
  @apply bg-stone-100 text-gray-700 text-sm p-2 rounded-sm w-full border border-gray-200 focus:outline-0 focus:shadow-[0px_0px_7px_4px] focus:shadow-gray-200 transition;
}
.contact-form .form-btn {
  @apply bg-indigo-500 w-full mt-5 text-sm p-2 text-white rounded-sm hover:bg-indigo-700 transition cursor-pointer;
}

.contact-form .form-textarea {
  @apply bg-stone-100 text-gray-700 text-sm p-2 rounded-sm w-full h-35 border border-gray-200 focus:outline-0 focus:shadow-[0px_0px_7px_4px] focus:shadow-gray-200 transition resize-none;
}

/* blog */

.blog-head {
  animation: opacity 0.8s linear;
  @apply bg-white mx-5 sm:mx-10 lg:mx-20 my-10 flex flex-col items-center gap-5 border border-gray-200 px-4 py-8 rounded-2xl;
}
.blog-title {
  @apply text-3xl text-center text-gray-900;
}
.post-card {
  @apply relative bg-white flex flex-col justify-between items-start p-2 rounded-md text-sm border border-gray-200;
}
.post-card .reading-time {
  @apply w-full text-xs py-2 text-gray-700 space-y-1 border-t border-gray-200 pt-5;
}

/*SamplesPage*/
.samples-hero {
  animation: opacity 0.8s linear;
  @apply w-full h-fit bg-white flex flex-col
    items-center p-5 pt-0 rounded-md;
}
.samples-hero img {
  background: radial-gradient(#5700ff, #935bff);
}
.samples-hero-span {
  @apply relative text-sm p-0.5 -top-px bg-stone-100 px-2 rounded-b-lg;
}
.samples-hero-span::before {
  content: "";
  width: 20px;
  height: 20px;
  border-radius: 100%;
  background-color: transparent;
  position: absolute;
  right: -20px;
  top: 1px;
  box-shadow: -10px -8px #f5f5f4;
}
.samples-hero-span::after {
  content: "";
  width: 20px;
  height: 20px;
  border-radius: 100%;
  background-color: transparent;
  position: absolute;
  left: -20px;
  top: 1px;
  box-shadow: 9px -8px #f5f5fa;
}
.hero-cards {
  @apply bg-white flex sm:flex-nowrap flex-wrap justify-between items-center gap-5 my-10 p-5 rounded-md;
}
.hero-cards-item {
  @apply bg-gray-100 flex justify-center items-center p-5 w-full h-20 rounded-md text-sm hover:scale-105 transition-all duration-300 cursor-pointer;
}

